add shadowJar plugin